syntax = "proto3";
package safehouse.ams.commands;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Models.Survivors";

import "Models/Common/UUID.proto";

message DeleteSurvivor {
  safehouse.ams.UUID EntityID = 1;
}
