syntax = "proto3";
package safehouse.ams.services;
option csharp_namespace = "SafeHouseAMS.Transport.Protos.Services";

import "Models/Common/UUID.proto";
import "Models/Survivors/Survivor.proto";
import "Models/Survivors/CreateSurvivorCommand.proto";
import "Models/Survivors/DeleteSurvivorCommand.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service SurvivorCatalogue{
  rpc GetSingle (UUID) returns (models.Survivor);
  rpc ApplyCommand (CommandWrapper) returns (google.protobuf.Empty);
  
  rpc GetCollection (CollectionRequest) returns (stream models.Survivor);
  rpc GetTotalCount (google.protobuf.Empty) returns (TotalCountResponse); 
}

message CommandWrapper{
  oneof command {
    commands.CreateSurvivor CreateCommand = 1;
    commands.DeleteSurvivor DeleteCommand = 2;
  }
}

message CollectionRequest {
  int32 Skip = 1;
  google.protobuf.Int32Value Take = 2;
}

message TotalCountResponse {
  int32 Count = 1;
}
